--- a/application.html
+++ b/application.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>アプリ紹介</title>
   <link rel="stylesheet" type="text/css" href="style_app.css" />
 </head>
@@ -10,37 +11,43 @@
 <body>
 
 <div class="first"> 
-<h1>当番決めアプリ</h1>
-<h2 id="display"></h2>
-<button id = "btn">スタート！</button> 
-<h3 id="result"></h3>
+  <h1>当番決めアプリ</h1>
+  <h2 id="display"></h2>
+  <button id = "btn">スタート！</button> 
+  <h3 id="result"></h3>
 </div> 
-
+<h4>↓テキストboxにメンバーを入力↓</h4>
 <div class="second">
-<div class="third">
-  <P id="list1">
-    <input type="text" id="one">
-    <input type="text" id="two">
-    <input type="text" id="three">
-    <input type="text" id="four">
-    <input type="text" id="five">
-  </P>
+  <a href = index.html>
+    <button id="btn4">TOPへ</button>
+  </a>
+  <div class="third">
+    <P id="list1">
+      <input type="text" id="one">
+      <input type="text" id="two">
+      <input type="text" id="three">
+      <input type="text" id="four">
+      <input type="text" id="five">
+    </P>
 
-  <p id="list2">
-    <input type="text" id="six">
-    <input type="text" id="seven">
-    <input type="text" id="eight">
-    <input type="text" id="nine">
-    <input type="text" id="ten">
-  </p>
-</div>  
-  
-<button id="btn2">メンバー変更</button>
-<button id="btn3">次ページ</button>
+    <p id="list2">
+      <input type="text" id="six">
+      <input type="text" id="seven">
+      <input type="text" id="eight">
+      <input type="text" id="nine">
+      <input type="text" id="ten">
+    </p>
+  </div>  
+ 
+  <button id="btn2">メンバー変更</button>
+
+  <a href = point.html>
+    <button id="btn3">次ページ</button>
+  </a>
+
 </div>
 
-
-<script src="script.js"></script>
+<script src="application.js"></script>
    
 </body>
 
