--- a/last.html
+++ b/last.html
@@ -10,18 +10,47 @@
 
 <body>
   <h1><span id = "span1" ><u>・まとめ</u></span></h1>
-  <h2>・基礎コースで学んだこと
-    <p></p>
+  <h2>★基礎コースを通して学んだこと
+    <ul id="list">
+      <li>ペアプロを通して考えを言語化して伝えることの難しさと大切さ</li>
+      <li>プログラムがどういう指示でどう動くかしっかり理解する為のロジカル思考</li>
+      <li>プログラミングの楽しさ</li>
+    </ul>
   </h2>
   
-  <div>
+  <h2>★当初の目標</h2>
+  <h2 id="goal">
+    初めてのプログラミングでとにかく学びを楽しむ！
+    <p id="??">達成出来た?? <span id="arrow">=></span></p>
+  </h2>
+
+  <img id="clear" src="clear.png">
+    
+  <img id="code" src="code.png">
+  
+    <div>
     <button id="btn1">最後に</button>
   </div> 
  
+
+  <div id="back"></div>
+  <div id="ctr">
+    <p>
+    FND34期、インストラクター、関係者の皆さん<br>
+    ありがとうございました！！
+    </p>
+  </div>
+
+  
   <div>
     <a href = point.html>
       <button id="btn2">前へ</button>
     </a>
+  </div>      
+    <script src="last.js"></script>
+</body>
+
+</html>
   </div>      
     <script src="last.js"></script>
 </body>
