--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1><span id = "span1" >DIG 基礎コース 最終発表</span></h1>
+  <h1><span id = "span1" >DIG基礎コース 最終プレゼン</span></h1>
   <h2>トヨタ車体研究所 デジタルエンジニアリング部 荻野 真啓
     <p>2025年 2月 18日</p>
   </h2>
