--- a/application.html
+++ b/application.html
@@ -13,7 +13,7 @@
 <div class="first"> 
   <h1>当番決めアプリ</h1>
   <h2 id="display"></h2>
-  <button id = "btn">PUSH！</button> 
+  <button id = "btn">PUSH!</button> 
   <h3 id="result"></h3>
 </div> 
 <h4>↓テキストboxにメンバーを入力↓</h4>
@@ -42,7 +42,7 @@
   <button id="btn2">メンバー変更</button>
 
   <a href = point.html>
-    <button id="btn3">次ページ</button>
+    <button id="btn3">次へ</button>
   </a>
 
 </div>
