--- a/point.html
+++ b/point.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <u><h1><span id = "sp1" >⚫アプリ作成 大変だったポイント</span></h1></u>
+  <u><h1><span id = "sp1" >⚫アプリ/WEBページ作成で大変だったポイント</span></h1></u>
   <h2>・画面レイアウト(html & css)</h2>
   
   <div class="div1">
@@ -31,13 +31,14 @@
    </ul>
    <input type="image" id="arrow" alt="error" src="arrow.png"> 
    <h4 id="comment">
-    <P id="com1">
-      実際にWEBサイトを作成することで<span id="tag">タグ、クラス、ID</span>を使った<br>
-      画面構成のやり方や<i id="dom">DOM</i>の考え方の重要性を改めて感じることが出来た。
-    </P>  
     <P id="com2">
       継続して勉強中！！
     </P>
+    <P id="com1">
+      実際にWEBページを作成することで<span id="tag">タグ、クラス、ID</span>を使った<br>
+      画面構成のやり方や<i id="dom">DOM</i>の考え方の重要性を改めて感じることが出来た。
+    </P>  
+    
   </h4>
   </div>
 
