--- a/last.html
+++ b/last.html
@@ -10,15 +10,15 @@
 
 <body>
   <h1><span id = "span1" ><u>・まとめ</u></span></h1>
-  <h2>★基礎コースを通して学んだこと
+  <h2><span id="basic">★基礎コースを通して学んだこと</span>
     <ul id="list">
       <li>ペアプロを通して考えを言語化して伝えることの難しさと大切さ</li>
       <li>プログラムがどういう指示でどう動くかしっかり理解する為のロジカル思考</li>
-      <li>プログラミングの楽しさ</li>
+      <li id="prog">プログラミングの楽しさ!</li>
     </ul>
   </h2>
   
-  <h2>★当初の目標</h2>
+  <h2><span id="initial">★当初の目標</h2></span>
   <h2 id="goal">
     初めてのプログラミングでとにかく学びを楽しむ！
     <p id="??">達成出来た?? <span id="arrow">=></span></p>
@@ -46,11 +46,6 @@
     <a href = point.html>
       <button id="btn2">前へ</button>
     </a>
-  </div>      
-    <script src="last.js"></script>
-</body>
-
-</html>
   </div>      
     <script src="last.js"></script>
 </body>
